--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -141,6 +141,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btnSelectionWorkout" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnStartExam"
         style="@style/ButtonPrimary"
         android:layout_width="match_parent"
         android:layout_height="54dp"
