--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -11,8 +11,8 @@
         <item name="colorOnSecondary">@color/white_a90</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/transparent</item>
-        <item name="android:navigationBarColor">#000000</item>
+        <item name="android:navigationBarColor">@color/transparent</item>
 
-        <item name="android:windowBackground">@color/white_100</item>
+        <item name="android:windowBackground">@color/black_50</item>
     </style>
 </resources>
