--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,5 +6,15 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.koen.gosexam.presentation.home.HomeFragment"
-        android:label="HomeFragment" />
+        android:label="HomeFragment" >
+        <action
+            android:id="@+id/action_homeFragment_to_examFragment"
+            app:destination="@id/examFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="false" />
+    </fragment>
+    <fragment
+        android:id="@+id/examFragment"
+        android:name="com.koen.gosexam.presentation.exam.ExamFragment"
+        android:label="ExamFragment" />
 </navigation>
