Пофишекшен баг с adapter delegate. Добавлен список вопросов

--- a/app/src/main/res/values/styles_text.xml
+++ b/app/src/main/res/values/styles_text.xml
@@ -25,4 +25,10 @@
         <item name="android:lineSpacingExtra">2sp</item>
     </style>
 
+    <style name="DefaultBadge">
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">@font/opensans_medium</item>
+        <item name="android:lineSpacingExtra">2sp</item>
+    </style>
+
 </resources>
