--- a/app/src/main/res/layout/item_question.xml
+++ b/app/src/main/res/layout/item_question.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginStart="16dp"
+    android:id="@+id/cardQuestion"
     android:layout_marginEnd="16dp"
     android:layout_marginVertical="8dp"
     android:layout_height="wrap_content">
