--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,8 +8,8 @@
         android:name="com.koen.gosexam.presentation.question.details.QuestionDetailsFragment"
         android:label="QuestionDetailsFragment">
         <argument
-            android:name="examUi"
-            app:argType="com.koen.gosexam.presentation.models.ExamUi" />
+            android:name="questionUi"
+            app:argType="com.koen.gosexam.presentation.models.QuestionUi" />
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
@@ -30,5 +30,9 @@
     <fragment
         android:id="@+id/examFragment"
         android:name="com.koen.gosexam.presentation.exam.ExamFragment"
-        android:label="ExamFragment" />
+        android:label="ExamFragment" >
+        <argument
+            android:name="examUiList"
+            app:argType="com.koen.gosexam.presentation.models.ExamUi[]" />
+    </fragment>
 </navigation>
