--- a/app/src/main/res/layout/item_answer_exam_test.xml
+++ b/app/src/main/res/layout/item_answer_exam_test.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/container"
     android:layout_marginHorizontal="16dp"
     android:layout_marginTop="8dp"
     android:background="@drawable/bg_solid_gray_60_4">
