--- a/app/src/main/res/layout/fragment_exam_result.xml
+++ b/app/src/main/res/layout/fragment_exam_result.xml
@@ -16,7 +16,7 @@
         app:title="Результаты" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout2"
+        android:id="@+id/containerTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -40,6 +40,7 @@
             tools:text="Тест успешно пройден" />
 
         <TextView
+            android:id="@+id/tvInfo"
             style="@style/DefaultBody"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -53,11 +54,13 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/tvExams"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
+        app:layout_constraintTop_toBottomOf="@+id/containerTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
