--- a/app/src/main/res/values/styles_text.xml
+++ b/app/src/main/res/values/styles_text.xml
@@ -49,4 +49,10 @@
         <item name="android:lineSpacingExtra">2sp</item>
     </style>
 
+    <style name="CustomBodyS">
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">@font/opensans_regular</item>
+        <item name="android:lineSpacingExtra">2sp</item>
+    </style>
+
 </resources>
