--- a/app/src/main/res/layout/fragment_range_question.xml
+++ b/app/src/main/res/layout/fragment_range_question.xml
@@ -72,12 +72,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/bg_solid_gray_blue20_4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rangeSlider">
+            app:layout_constraintTop_toBottomOf="@+id/cbRandomQuestions">
 
             <ImageView
                 android:id="@+id/imageView"
@@ -106,6 +106,20 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <CheckBox
+            android:id="@+id/cbRandomQuestions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="12dp"
+            android:theme="@style/Widget.CheckBoxStyles"
+            android:text="Загрузить вопросы в случайном порядке"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etStart" />
+
         <com.google.android.material.slider.RangeSlider
             android:id="@+id/rangeSlider"
             android:layout_width="match_parent"
@@ -114,6 +128,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             app:labelBehavior="gone"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etStart"
