--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -38,20 +38,26 @@
         android:label="ExamFragment" >
         <argument
             android:name="examUiList"
-            app:argType="com.koen.gosexam.presentation.models.ExamUi[]" />
+            app:argType="com.koen.gosexam.presentation.models.SettingsExam"
+            app:nullable="true" />
         <action
             android:id="@+id/action_examFragment_to_examResultFragment"
             app:destination="@id/examResultFragment"
             app:popUpTo="@id/examFragment"
-            app:popUpToInclusive="true" />
+            app:popUpToInclusive="true" >
+            <argument
+                android:name="resultTestUi"
+                android:defaultValue="1" />
+        </action>
     </fragment>
     <fragment
         android:id="@+id/examResultFragment"
         android:name="com.koen.gosexam.presentation.exam.result.ExamResultFragment"
         android:label="ExamResultFragment" >
         <argument
-            android:name="resultTestUi"
-            app:argType="com.koen.gosexam.presentation.models.ResultTestUi[]" />
+            android:name="id"
+            app:argType="long"
+            android:defaultValue="1L" />
     </fragment>
     <fragment
         android:id="@+id/selectionFacultyFragment"
